--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,15 +9,19 @@
     "lint": "eslint",
     "postinstall": "next telemetry disable || true",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "setup-firebase": "node scripts/setup-firebase.js"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
+    "@radix-ui/colors": "^3.0.0",
+    "@react-spring/web": "^10.0.3",
     "@supabase/supabase-js": "^2.75.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "firebase": "^12.4.0",
     "framer-motion": "^12.23.24",
     "next": "15.5.4",
     "react": "19.1.0",
